# psr-arranger-emulator

./: .gitignore  CMakeLists.txt  PLANO_DESENVOLVIMENTO.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Engine/: ChordDetector.cpp  ChordDetector.h  LoopPlayer.cpp  LoopPlayer.h  MidiRouter.cpp  MidiRouter.h  StyleEngine.cpp  StyleEngine.h  TransposeEngine.cpp  TransposeEngine.h
Source/STY/: CasmParser.cpp  CasmParser.h  StyFile.h  StyParser.cpp  StyParser.h  StySection.h
Source/SoundFont/: FluidSynthEngine.cpp  FluidSynthEngine.h  SoundFontManager.cpp  SoundFontManager.h
Source/UI/: ChordDisplay.cpp  ChordDisplay.h  MixerPanel.cpp  MixerPanel.h  SetupDialog.cpp  SetupDialog.h  StylePanel.cpp  StylePanel.h  TransportPanel.cpp  TransportPanel.h
